--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "roots": ["src", "test"],
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -73,6 +73,7 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
+    "coverageReporters": ["lcov", "text"],
     "testEnvironment": "node"
   }
 }
